Fixed Image Container Wrap.

--- a/css/home.css
+++ b/css/home.css
@@ -97,10 +97,10 @@
 }
 
 .hero-img-box {
-  height: 100%;
+  height: 20rem;
   justify-self: center;
   min-width: 100%;
-  max-height: 20rem;
+  max-height: 100%;
   overflow: hidden;
 }
 
