--- a/css/new.css
+++ b/css/new.css
@@ -60,9 +60,9 @@
 
 .new-img {
   position: relative;
-  height: 100%;
+  height: 20rem;
   min-width: 100%;
-  max-height: 20rem;
+  max-height: 100%;
   border-radius: var(--br-12-small-card-item);
   overflow: hidden;
 }
