--- a/css/shop.css
+++ b/css/shop.css
@@ -61,6 +61,7 @@
 .products-img {
   position: relative;
   min-width: 100%;
+  max-height: 100%;
   height: 20rem;
   border-radius: var(--br-12-small-card-item);
   overflow: hidden;
